// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogomarkSpinner renders a white spinner 1`] = `
@keyframes animation-0 {
  5% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
  }
}

@keyframes animation-1 {
  71% {
    -webkit-clip-path: polygon(0% 0%, 0% 77%, 100% 34%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 77%, 100% 34%, 100% -44%);
  }

  95% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  position: relative;
  width: 100px;
}

.emotion-1 {
  padding-top: 100%;
}

.emotion-2 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  bottom: 0;
  left: 11.675%;
  position: absolute;
  right: 11.675%;
  top: 0;
}

.emotion-3 {
  -webkit-animation: animation-1 cubic-bezier(0.3, 0.75, 1, 0.85) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0.3, 0.75, 1, 0.85) 2s infinite alternate;
}

.emotion-4 {
  -webkit-clip-path: polygon(0% -10%, 168.5% 64%, 0% 135%);
  clip-path: polygon(0% -10%, 168.5% 64%, 0% 135%);
}

.emotion-5 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <svg
            version="1.1"
            viewBox="0 0 2640 3444"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Loading
            </title>
            <path
              class="emotion-5"
              d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
              fill="none"
              stroke="#ffffff"
              stroke-linejoin="round"
              stroke-width="300"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LogomarkSpinner renders with a custom size 1`] = `
@keyframes animation-0 {
  5% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
  }
}

@keyframes animation-1 {
  71% {
    -webkit-clip-path: polygon(0% 0%, 0% 77%, 100% 34%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 77%, 100% 34%, 100% -44%);
  }

  95% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  position: relative;
  width: 200px;
}

.emotion-1 {
  padding-top: 100%;
}

.emotion-2 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  bottom: 0;
  left: 11.675%;
  position: absolute;
  right: 11.675%;
  top: 0;
}

.emotion-3 {
  -webkit-animation: animation-1 cubic-bezier(0.3, 0.75, 1, 0.85) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0.3, 0.75, 1, 0.85) 2s infinite alternate;
}

.emotion-4 {
  -webkit-clip-path: polygon(0% -10%, 168.5% 64%, 0% 135%);
  clip-path: polygon(0% -10%, 168.5% 64%, 0% 135%);
}

.emotion-5 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <svg
            version="1.1"
            viewBox="0 0 2640 3444"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Loading
            </title>
            <path
              class="emotion-5"
              d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
              fill="none"
              stroke="#05192d"
              stroke-linejoin="round"
              stroke-width="300"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LogomarkSpinner renders with default props 1`] = `
@keyframes animation-0 {
  5% {
    -webkit-clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
    clip-path: polygon(0% -12%, 0% -12%, 169% 63%, 169% 63%);
  }

  100% {
    -webkit-clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
    clip-path: polygon(0% -12%, 0% 308%, 169% 383%, 169% 63%);
  }
}

@keyframes animation-1 {
  71% {
    -webkit-clip-path: polygon(0% 0%, 0% 77%, 100% 34%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 77%, 100% 34%, 100% -44%);
  }

  95% {
    -webkit-clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
    clip-path: polygon(0% 0%, 0% 140%, 100% 96%, 100% -44%);
  }
}

@keyframes animation-2 {
  100% {
    stroke-dashoffset: 0;
  }
}

.emotion-0 {
  position: relative;
  width: 100px;
}

.emotion-1 {
  padding-top: 100%;
}

.emotion-2 {
  -webkit-animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-0 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  bottom: 0;
  left: 11.675%;
  position: absolute;
  right: 11.675%;
  top: 0;
}

.emotion-3 {
  -webkit-animation: animation-1 cubic-bezier(0.3, 0.75, 1, 0.85) 2s infinite alternate;
  animation: animation-1 cubic-bezier(0.3, 0.75, 1, 0.85) 2s infinite alternate;
}

.emotion-4 {
  -webkit-clip-path: polygon(0% -10%, 168.5% 64%, 0% 135%);
  clip-path: polygon(0% -10%, 168.5% 64%, 0% 135%);
}

.emotion-5 {
  -webkit-animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  animation: animation-2 cubic-bezier(0.65, 0, 0.55, 1) 2s infinite alternate;
  stroke-dasharray: 9800;
  stroke-dashoffset: 9800;
}

<div
  class="emotion-0"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <div
        class="emotion-3"
      >
        <div
          class="emotion-4"
        >
          <svg
            version="1.1"
            viewBox="0 0 2640 3444"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <title>
              Loading
            </title>
            <path
              class="emotion-5"
              d="M0 0 M2569 1056L143 2447V149l1175 673v1867l1248 715"
              fill="none"
              stroke="#05192d"
              stroke-linejoin="round"
              stroke-width="300"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
